--- a/main.html
+++ b/main.html
@@ -10,6 +10,37 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<label for="name">Name*</label>
+		<input type="text" id="#name"  required placeholder="Name"><br>
+		<label for="email">Email*</label>
+		<input type="email" id="#email" placeholder="Email" required><br>
+		
+  <label>Gender*</label>
+  <input type="radio" id="gender_m" name="gender" value="male" required>
+  <label for="gender_m">Male</label>
+  <input type="radio" id="gender_f" name="gender" value="female" required>
+  <label for="gender_f">Female</label>
+	<br>
+
+  <label for="laptop">Laptop Brands:</label>
+		<select id="#laptop">
+	    <option id="Apple">Apple</option>
+		<option id="Asus">Asus</option>
+		<option id="HP">HP</option>
+			</select> <br>
+
+		<label for="age" >Age*</label>
+		<input type="number" id="#age" name="age" required placeholder="Age"><br>
+
+		<label for="DOB" >DOB*</label>
+		<input type="date" id="#dob" name="DOB" required><br>
+
+		<label for="password" >Password*</label>
+		<input type="password" id="#password" name="password" required placeholder="Password"><br>
+
+		  <button type="submit">Submit</button>
+	</form>
 
 </body>
 
