--- a/main.html
+++ b/main.html
@@ -10,37 +10,41 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form>
-		<label for="name">Name*</label>
-		<input type="text" id="#name"  required placeholder="Name"><br>
-		<label for="email">Email*</label>
-		<input type="email" id="#email" placeholder="Email" required><br>
-		
-  <label>Gender*</label>
-  <input type="radio" id="gender_m" name="gender" value="male" required>
-  <label for="gender_m">Male</label>
-  <input type="radio" id="gender_f" name="gender" value="female" required>
-  <label for="gender_f">Female</label>
-	<br>
+	<form method="post">
+			<label for="name">Name*</label>
+			<input id="name" type="text" required><br>
 
-  <label for="laptop">Laptop Brands:</label>
-		<select id="#laptop">
-	    <option id="Apple">Apple</option>
-		<option id="Asus">Asus</option>
-		<option id="HP">HP</option>
-			</select> <br>
+			<label for="email">Email*</label>
+			<input type="email" id="email" required><br>
 
-		<label for="age" >Age*</label>
-		<input type="number" id="#age" name="age" required placeholder="Age"><br>
+			<label for="gender">Gender*</label>
+			<label>Male</label>
+			<input type="radio" required id="gender_m" name="gender">
+			<label>Female</label>
+			<input type="radio" required id="gender_f" name="gender"><br>
 
-		<label for="DOB" >DOB*</label>
-		<input type="date" id="#dob" name="DOB" required><br>
+			<label for="laptop">Laptop Brands</label>
+			<select id="laptop">
+				<option>Apple</option>
+				<option>Asus</option>
+				<option>HP</option>
+			</select><br>
 
-		<label for="password" >Password*</label>
-		<input type="password" id="#password" name="password" required placeholder="Password"><br>
+			<label for="age">Age*</label>
+			<input type="number" required id="age"><br>
 
-		  <button type="submit">Submit</button>
-	</form>
+			<label for="dob">DOB*</label>
+			<input id="dob" type="date" required><br>
+
+			<label for="password">Password*</label>
+			<input type="password" required id="password"><br>
+
+			<button type="submit">Submit</button>
+
+			<label for="portfolio">portfolio</label>
+			<input type="url" id="portfolio">
+				
+		</form>
 
 </body>
 
